# scrapling-spider

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
demo/: app.py
docs/: tool-scrapling.md
scrapling_spider/: __init__.py  models.py  spider.py
