[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapling-spider"
version = "0.1.0"
description = "Advanced Scrapling-based spider for reconnaissance purposes"
requires-python = ">=3.10"
dependencies = [
    "scrapling[all]",
    "pydantic>=2.0",
    "curl-cffi>=0.15.0",
    "playwright>=1.59.0",
    "patchright>=1.59.1",
    "msgspec>=0.21.1",
    "browserforge",
    "anyio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapling_spider*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
demo = ["streamlit"]
